Bug 302356 Crash when drag-scrolling combobox [@ nsIFrame::HasView][@ nsIFrame::GetOffsetTo] r=roc sr=roc a=bsmedberg